# c4recover

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  RELEASE.md  c4recover-version.hpp.in
doc/: BTS.schema
src/: config.xml  constants.hpp  exceptions.hpp  limits.hpp  main.cpp  narrow.hpp  text.hpp  util.cpp  util.hpp
